--- a/GreenCharger/src/app/admin/components/products/product-details/product-details.component.html
+++ b/GreenCharger/src/app/admin/components/products/product-details/product-details.component.html
@@ -79,7 +79,8 @@
             
             <div class="detail-description">
               <h4>Mô tả sản phẩm</h4>
-              <p>{{ product.description }}</p>
+              <!-- Sử dụng innerHTML để render HTML -->
+              <div class="description-content" [innerHTML]="getSafeHtml(product.description)"></div>
             </div>
             
             <div class="detail-row">
