--- a/GreenCharger/src/app/admin/components/products/products.component.html
+++ b/GreenCharger/src/app/admin/components/products/products.component.html
@@ -111,7 +111,7 @@
           <td>
             <div class="product-info">
               <div class="product-name">{{ product.name }}</div>
-              <div class="product-description">{{ product.description }}</div>
+              <div class="product-description" [innerHTML]="getSafeHtml(product.description)"></div>
             </div>
           </td>
           <td>
